// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component App render component App without crashing 1`] = `
<Fragment>
  <button
    className="btn"
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <ReactGridLayout
    autoSize={true}
    className="panels"
    cols={4}
    compactType="vertical"
    containerPadding={null}
    draggableCancel=""
    draggableHandle=""
    isDraggable={true}
    isResizable={true}
    layout={Array []}
    margin={
      Array [
        10,
        10,
      ]
    }
    maxRows={Infinity}
    onDrag={[Function]}
    onDragStart={[Function]}
    onDragStop={[Function]}
    onLayoutChange={[Function]}
    onResize={[Function]}
    onResizeStart={[Function]}
    onResizeStop={[Function]}
    preventCollision={false}
    rowHeight={300}
    style={Object {}}
    useCSSTransforms={true}
    verticalCompact={true}
    width={1600}
  />
</Fragment>
`;

exports[`component App render component App without crashing and change props with new render 1`] = `
<Fragment>
  <button
    className="btn"
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <ReactGridLayout
    autoSize={true}
    className="panels"
    cols={4}
    compactType="vertical"
    containerPadding={null}
    draggableCancel=""
    draggableHandle=""
    isDraggable={true}
    isResizable={true}
    layout={Array []}
    margin={
      Array [
        10,
        10,
      ]
    }
    maxRows={Infinity}
    onDrag={[Function]}
    onDragStart={[Function]}
    onDragStop={[Function]}
    onLayoutChange={[Function]}
    onResize={[Function]}
    onResizeStart={[Function]}
    onResizeStop={[Function]}
    preventCollision={false}
    rowHeight={300}
    style={Object {}}
    useCSSTransforms={true}
    verticalCompact={true}
    width={1600}
  />
</Fragment>
`;

exports[`component App render component App without crashing and change props with new render 2`] = `
<Fragment>
  <button
    className="btn"
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <ReactGridLayout
    autoSize={true}
    className="panels"
    cols={4}
    compactType="vertical"
    containerPadding={null}
    draggableCancel=""
    draggableHandle=""
    isDraggable={true}
    isResizable={true}
    layout={Array []}
    margin={
      Array [
        10,
        10,
      ]
    }
    maxRows={Infinity}
    onDrag={[Function]}
    onDragStart={[Function]}
    onDragStop={[Function]}
    onLayoutChange={[Function]}
    onResize={[Function]}
    onResizeStart={[Function]}
    onResizeStop={[Function]}
    preventCollision={false}
    rowHeight={300}
    style={Object {}}
    useCSSTransforms={true}
    verticalCompact={true}
    width={1600}
  >
    <div
      data-grid={
        Object {
          "h": 1,
          "w": 1,
          "x": 0,
          "y": 0,
        }
      }
      key="10"
    >
      <Connect(Panel)
        id={10}
        x={0}
        y={0}
      />
    </div>
  </ReactGridLayout>
</Fragment>
`;
